[gd_scene load_steps=7 format=2]

[ext_resource path="res://source/ui/subcomponents/slots/action_slot/ActionSlot.gd" type="Script" id=1]
[ext_resource path="res://source/ui/subcomponents/interaction_menu/InteractionMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/stylebox/slot.tres" type="StyleBox" id=3]
[ext_resource path="res://resources/fonts/content_mini.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/third_party/crosshairpack_kenney/Preview.png" type="Texture" id=5]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="ActionSlot" type="Button"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
focus_mode = 0
mouse_filter = 2
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
enabled_focus_mode = 0
expand_icon = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShortcutLabel" type="Label" parent="GridContainer"]
margin_right = 12.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "[n]"
align = 1
valign = 1

[node name="Panel" type="Panel" parent="GridContainer"]
margin_left = 12.0
margin_right = 22.0
margin_bottom = 14.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="Panel2" type="Panel" parent="GridContainer"]
margin_left = 22.0
margin_right = 32.0
margin_bottom = 14.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="Panel3" type="Panel" parent="GridContainer"]
margin_top = 14.0
margin_right = 12.0
margin_bottom = 23.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="Panel4" type="Panel" parent="GridContainer"]
margin_left = 12.0
margin_top = 14.0
margin_right = 22.0
margin_bottom = 23.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="Panel5" type="Panel" parent="GridContainer"]
margin_left = 22.0
margin_top = 14.0
margin_right = 32.0
margin_bottom = 23.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="Panel6" type="Panel" parent="GridContainer"]
margin_top = 23.0
margin_right = 12.0
margin_bottom = 32.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="Panel7" type="Panel" parent="GridContainer"]
margin_left = 12.0
margin_top = 23.0
margin_right = 22.0
margin_bottom = 32.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="Panel8" type="Panel" parent="GridContainer"]
margin_left = 22.0
margin_top = 23.0
margin_right = 32.0
margin_bottom = 32.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="TextureProgress" type="TextureProgress" parent="."]
self_modulate = Color( 0.027451, 0.027451, 0.027451, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
value = 34.0
texture_progress = ExtResource( 5 )
fill_mode = 5
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="TextureProgress"]

[node name="CooldownLabel" type="Label" parent="."]
margin_left = 3.0
margin_top = 3.0
margin_right = 35.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.929412, 0.027451, 0.027451, 1 )
custom_fonts/font = ExtResource( 4 )
align = 1
valign = 1

[node name="InteractionMenu" parent="." instance=ExtResource( 2 )]

[connection signal="tween_all_completed" from="TextureProgress/Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="tween_step" from="TextureProgress/Tween" to="." method="_on_Tween_tween_step"]
